; ModuleID = '/home/carl/AnghaBench/zfs/cmd/zpool/extr_zpool_main.c_zpool_do_resilver.c'
source_filename = "/home/carl/AnghaBench/zfs/cmd/zpool/extr_zpool_main.c_zpool_do_resilver.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32 }

@POOL_SCAN_RESILVER = common dso_local global i32 0, align 4
@POOL_SCRUB_NORMAL = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@stderr = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [21 x i8] c"invalid option '%c'\0A\00", align 1
@optopt = common dso_local global i32 0, align 4
@B_FALSE = common dso_local global i32 0, align 4
@optind = common dso_local global i64 0, align 8
@.str.2 = private unnamed_addr constant [28 x i8] c"missing pool name argument\0A\00", align 1
@B_TRUE = common dso_local global i32 0, align 4
@scrub_callback = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @zpool_do_resilver(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8**, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.TYPE_3__, align 4
  store i32 %0, i32* %3, align 4
  store i8** %1, i8*** %4, align 8
  %7 = load i32, i32* @POOL_SCAN_RESILVER, align 4
  %8 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %6, i32 0, i32 1
  store i32 %7, i32* %8, align 4
  %9 = load i32, i32* @POOL_SCRUB_NORMAL, align 4
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %6, i32 0, i32 0
  store i32 %9, i32* %10, align 4
  br label %11

11:                                               ; preds = %25, %2
  %12 = load i32, i32* %3, align 4
  %13 = load i8**, i8*** %4, align 8
  %14 = call i32 @getopt(i32 %12, i8** %13, i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str, i64 0, i64 0))
  store i32 %14, i32* %5, align 4
  %15 = icmp ne i32 %14, -1
  br i1 %15, label %16, label %26

16:                                               ; preds = %11
  %17 = load i32, i32* %5, align 4
  switch i32 %17, label %25 [
    i32 63, label %18
  ]

18:                                               ; preds = %16
  %19 = load i32, i32* @stderr, align 4
  %20 = call i8* @gettext(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.1, i64 0, i64 0))
  %21 = load i32, i32* @optopt, align 4
  %22 = call i32 (i32, i8*, ...) @fprintf(i32 %19, i8* %20, i32 %21)
  %23 = load i32, i32* @B_FALSE, align 4
  %24 = call i32 @usage(i32 %23)
  br label %25

25:                                               ; preds = %18, %16
  br label %11

26:                                               ; preds = %11
  %27 = load i64, i64* @optind, align 8
  %28 = load i32, i32* %3, align 4
  %29 = sext i32 %28 to i64
  %30 = sub nsw i64 %29, %27
  %31 = trunc i64 %30 to i32
  store i32 %31, i32* %3, align 4
  %32 = load i64, i64* @optind, align 8
  %33 = load i8**, i8*** %4, align 8
  %34 = getelementptr inbounds i8*, i8** %33, i64 %32
  store i8** %34, i8*** %4, align 8
  %35 = load i32, i32* %3, align 4
  %36 = icmp slt i32 %35, 1
  br i1 %36, label %37, label %43

37:                                               ; preds = %26
  %38 = load i32, i32* @stderr, align 4
  %39 = call i8* @gettext(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.2, i64 0, i64 0))
  %40 = call i32 (i32, i8*, ...) @fprintf(i32 %38, i8* %39)
  %41 = load i32, i32* @B_FALSE, align 4
  %42 = call i32 @usage(i32 %41)
  br label %43

43:                                               ; preds = %37, %26
  %44 = load i32, i32* %3, align 4
  %45 = load i8**, i8*** %4, align 8
  %46 = load i32, i32* @B_TRUE, align 4
  %47 = load i32, i32* @scrub_callback, align 4
  %48 = call i32 @for_each_pool(i32 %44, i8** %45, i32 %46, i32* null, i32 %47, %struct.TYPE_3__* %6)
  ret i32 %48
}

declare dso_local i32 @getopt(i32, i8**, i8*) #1

declare dso_local i32 @fprintf(i32, i8*, ...) #1

declare dso_local i8* @gettext(i8*) #1

declare dso_local i32 @usage(i32) #1

declare dso_local i32 @for_each_pool(i32, i8**, i32, i32*, i32, %struct.TYPE_3__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
